# SDLPlayer

./: CMakeLists.txt  README.md  logger.h  main.cpp
player/: sdl_player.cpp  sdl_player.h
video/: multicast_video_factory.cpp  multicast_video_factory.h  video_factory.h  video_frame.h  video_stream.h
